--- a/index.html
+++ b/index.html
@@ -4,14 +4,51 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Bootstrap Button Practice</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    </head>
+</head>
 
 <body>
-    <h1>Hello, world!</h1>
+
+    <div class="container-fluid text-center">
+        <div class="row mt-5">
+            <div class="col">
+                <h1>Bootstrap Button Practice</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <a href="https://www.frhsd.com/" target="_blank" class="btn btn-primary">FRHSD Website</a>
+            </div>
+            <div class="col">
+                <a href="https://www.merriam-webster.com/dictionary/danger" target="_blank"
+                    class="btn btn-danger">Danger</a>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col">
+                <a href="https://constitution.congress.gov/constitution/amendment-2/#:~:text=A%20well%20regulated%20Militia%2C%20being,Arms%2C%20shall%20not%20be%20infringed." target="_blank" class="btn btn-outline-secondary btn-lg">Large Secondary</a>
+            </div>
+            <div class="col">
+                <a href="https://www.wikipedia.org/" target="_blank" class="btn btn-outline-info btn-sm">Small Info</a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="d-grid gap-2">
+                    <button class="btn purp btn-primary" type="button">Magenta</button>
+                    <button class="btn btn-primary gradial" type="button">Gradient</button>
+                  </div>
+            </div>
+        </div>
+
+    </div>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
